--- a/ExpenseApp/css/style.css
+++ b/ExpenseApp/css/style.css
@@ -34,3 +34,26 @@ body {
 .x.axis path {
   display: none;
 }
+
+.button-error {
+            background: rgb(202, 60, 60); /* this is a maroon */
+            color: white;
+            border-radius: 4px;
+            text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
+        }
+
+
+input {
+	background-color:transparent;
+	border:none;
+	border-bottom:1px dotted #999;
+	text-align:left;
+	min-width:200px;
+	display:inline-block;
+	font-size:14px;
+	-webkit-border-radius:0;
+	-moz-border-radius:0;
+	-ms-border-radius:0;
+	-o-border-radius:0;
+	border-radius:0;-webkit-background-clip:padding;-moz-background-clip:padding;background-clip:padding-box;-webkit-box-shadow:0 0 0 rgba(0,0,0,0);-moz-box-shadow:0 0 0 rgba(0,0,0,0);box-shadow:0 0 0 rgba(0,0,0,0);border-top:none;border-left:none;border-right:none;padding:1px;outline:none}
+}
