--- a/css/stylenew.css
+++ b/css/stylenew.css
@@ -25,21 +25,23 @@
 }
 #sidebar-wrapper {
     height: 100%;
-    padding: 50px 0 0px 0;
+    padding: 40px 0 0px 0;
     position: fixed;
     border-right: 1px solid gray;
-    min-width: 100px;
+    background: #e2e2e2;
 }
 #sidebar {
     position: relative;
     height: 100%;
     overflow-y: auto;
+    background: #e2e2e2;
 }
 #sidebar .list-group-item {
         border-radius: 0;
         border-left: 0;
         border-right: 0;
         border-top: 0;
+        background: #e2e2e2;
 }
 @media (max-width: 992px) {
     body {
