--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,8 @@
 	position: absolute;
 	top: 50%;
 	left: 50%;
-	background: url(http://loadinggif.com/images/image-selection/10.gif) no-repeat;
+	background: url(../img/10.gif) no-repeat;
+	/* url: http://loadinggif.com/images/image-selection/10.gif */;
 	/*background: url(http://i.imgur.com/Kh2Osoy.gif) no-repeat;*/
 	display: inline-block;
 	width: 32px;
